# weather_surreal

./: Cargo.toml  SUNSET_TABLE.md  TEMPERATURE_TABLE.md
src/: cities.rs  connectdb.rs  country.rs  main.rs  mainweather.rs  request.rs  sunset.rs  surrealmodel.rs  temperature.rs  weathermodel.rs  wind.rs
