[package]
name = "weather_surreal"
version = "0.1.0"
edition = "2024"

[dependencies]
surrealdb = "2.3.3"
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = { version = "0.12.19", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.0", features = ["full"] }
