[package]
name = "weather_surreal"
version = "0.1.0"
edition = "2021"

[dependencies]
surrealdb = "2.3.5"
chrono = { version = "0.4.41", features = ["serde"] }
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.0", features = ["json"] }
tower-http = { version = "0.6.6", features = ["cors"] }
